# pyvardump

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
config/: project.py  python.py  version.py
doc/: TODO.txt  links.txt
pyvardump/: __init__.py  dump.py  static.py
snipplets/: main.md.mako
src/pyvardump/: dump.py
