[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvardump"
version = "0.0.5"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pyvardump helps you dump variables in python"
readme = "README.md"
license = "MIT"
keywords=[
    "dump",
    "json",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyvardump"
"Bug Tracker" = "https://github.com/veltzer/pyvardump/issues"
"Documentation" = "https://veltzer.github.io/pyvardump"
"Download" = "https://pypi.org/project/pyvardump/"
"Repository" = "https://github.com/veltzer/pyvardump"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyvardump"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyvardump/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"

[tool.uv.pip]
prerelease = "disallow"
